--- a/capturesingleentry-uwp.csproj
+++ b/capturesingleentry-uwp.csproj
@@ -178,9 +178,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <!-- <PackageReference Include="Newtonsoft.Json">
+     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
-    </PackageReference> -->
+    </PackageReference> 
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.11</Version>
     </PackageReference>
